# litebox

./: .gitignore
.github/workflows/: ci.yml
dev_bench/unixbench/: prepare_unixbench.py
dev_tests/src/: boilerplate.rs  ratchet.rs
litebox/src/: pipes.rs  shim.rs
litebox/src/fs/: in_mem.rs  layered.rs  mod.rs  tests.rs
litebox/src/mm/: allocator.rs  exception_table.rs  linux.rs  tests.rs
litebox/src/platform/: arch.rs  mock.rs  mod.rs  trivial_providers.rs
litebox/src/sync/: futex.rs
litebox_common_linux/: Cargo.toml
litebox_common_linux/src/: lib.rs  loader.rs
litebox_common_optee/src/: lib.rs
litebox_packager/: Cargo.toml
litebox_packager/src/: lib.rs  main.rs  oci.rs
litebox_platform_linux_kernel/src/: lib.rs
litebox_platform_linux_userland/: Cargo.toml
litebox_platform_linux_userland/src/: lib.rs
litebox_platform_lvbs/src/: lib.rs  syscall_entry.rs
litebox_platform_windows_userland/src/: lib.rs
litebox_runner_linux_on_windows_userland/src/: lib.rs
litebox_runner_linux_on_windows_userland/tests/: loader.rs
litebox_runner_linux_userland/src/: lib.rs
litebox_runner_linux_userland/tests/: helpers.h  iov_max.c  loader.rs  pause.c  preadv.c  pwritev.c  run.rs  statx.c  unix_dgram_shutdown.c  unix_stream_shutdown.c
litebox_runner_lvbs/src/: lib.rs  main.rs
litebox_runner_optee_on_linux_userland/src/: lib.rs  tests.rs
litebox_runner_snp/src/: entry.S  main.rs
litebox_shim_linux/: Cargo.toml
litebox_shim_linux/src/: channel.rs  lib.rs
litebox_shim_optee/src/: lib.rs  msg_handler.rs
litebox_syscall_rewriter/: Cargo.toml
litebox_syscall_rewriter/src/: lib.rs
litebox_syscall_rewriter/tests/: snapshot_tests.rs
litebox_syscall_rewriter/tests/snapshots/: snapshot_tests__hello-32-diff.snap  snapshot_tests__hello-diff.snap
litebox_util_log/src/: lib.rs
litebox_util_log/tests/: facade.rs
(+35 files in other folders)
