[package]
name = "litebox_syscall_rewriter"
version = "0.1.0"
edition = "2024"

[features]
default = ["std", "anyhow", "clap"]
std = []
anyhow = ["dep:anyhow"]
clap = ["dep:clap"]

[dependencies]
iced-x86 = { version = "1.21", default-features = false, features = ["no_std", "decoder", "encoder", "instr_info"] }
object = { version = "0.36.7", default-features = false, features = ["elf", "read_core"] }
thiserror = { version = "2.0.6", default-features = false }
zerocopy = { version = "0.8", default-features = false, features = ["derive"] }

# Binary-only dependencies
anyhow = { version = "1.0", optional = true }
clap = { version = "4.5.32", features = ["derive"], optional = true }

[[bin]]
name = "litebox_syscall_rewriter"
required-features = ["std", "anyhow", "clap"]

[lints]
workspace = true

[dev-dependencies]
insta = "1.42.2"
similar = "2.7.0"
tempfile = "3.19.1"
